# SI-Seminer_VSCode_EX

./: CHANGELOG.md  README.md  package-lock.json  package.json
server/: Dockerfile  README.md  change.py  docker-compose.yml  hash.py  main.py  pyproject.toml  requirements.txt
server/src/: change.py  main.py
server/src/server/: main.py
src/: extension.ts  index.ts
