[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hayato-n8810", email = "s276185@wakayama-u.ac.jp" }
]
dependencies = [
    "fastapi>=0.115.7",
    "uvicorn>=0.34.0",
    "simhash>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
